@@ -1,3 +1,9 @@
+2012-04-07  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* scripts/tablelistEdit.tcl:   Small corrections and improvements.
+	* scripts/tablelistThemes.tcl:
+	* scripts/tablelistUtil.tcl:
+
 2012-04-05  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:              Updated to reflect the changes.
